Session fixes
